kustomizations/core/whisper-asr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisper-asr
spec:
  selector:
    app: whisper-asr
  ports:
  - port: 8000
    targetPort: 8000
