kustomizations/core/whisper-asr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-ingress
spec:
  rules:
  - host: whisper-asr.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whisper-asr
            port:
              number: 8000
